--- a/src/style/_text.scss
+++ b/src/style/_text.scss
@@ -1,7 +1,5 @@
-h3 {
-  font-size: 30px;
-  text-transform: uppercase;
-}
-body {
-  background-color: rgb(239, 241, 213);
-}
+// Headers
+
+// Paragraphs
+
+// Specials
