--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -10,3 +10,16 @@
   justify-content: center;
   align-items: center;
 }
+.navigation {
+  grid-column: 1 / -1;
+  grid-row: 2 / 3;
+
+  width: 100%;
+  min-height: 5rem;
+
+  background-color: deepskyblue; //trebuie schimbat
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
