--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -17,7 +17,7 @@
   width: 100%;
   min-height: 5rem;
 
-  background-color: deepskyblue; //trebuie schimbat
+  background-color: darkgreen; //trebuie schimbat
 
   display: flex;
   justify-content: center;
