--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -16,4 +16,5 @@ $color-primary: #faedcd;
 $color-secondary: #f8f9fa;
 $color-tertiary: #d4a373;
 
+$color-text-dark: #212529;
 $color-text-light: #dee2e6;
