--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -17,10 +17,18 @@ html {
 
 body {
   font-family: $text-primary;
-  line-height: 1.6;
+  line-height: 1.45;
+  font-size: 2.1rem;
   background-color: $color-primary;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   grid-auto-rows: minmax(5vh, auto);
+
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 1.9rem;
+  }
+  @media only screen and (max-width: $bp-small) {
+    font-size: 1.7rem;
+  }
 }
