--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -1,7 +1,9 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Scheherazade+New:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Grechen+Fuemen&display=swap');
 
 $text-primary: 'Scheherazade New', serif;
+$text-hand: 'Grechen Fuemen', cursive;
 
 // Breakpoints
 $bp-4k: 156em; // 2500px
