--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -20,3 +20,7 @@ $color-tertiary: #d4a373;
 
 $color-text-dark: #212529;
 $color-text-light: #dee2e6;
+
+// Shadows
+$button-shadow: 5px 10px 15px rgba(black, 0.3);
+$button-shadow-hover: 5px 15px 20px rgba(black, 0.6);
