--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -60,13 +60,14 @@
     min-height: 35rem;
   }
   @media only screen and (max-width: $bp-small) {
-    min-height: 35rem;
+    min-height: 45rem;
     align-items: flex-end;
+    background-position: top;
   }
 
   &__box {
+    width: 50rem;
     height: 30rem;
-    width: 40rem;
     border-radius: 3px;
     padding: 2rem;
     background-color: $color-primary;
@@ -78,7 +79,6 @@
 
     @media only screen and (max-width: $bp-large) {
       width: 50rem;
-      height: 30rem;
     }
     @media only screen and (max-width: $bp-medium) {
       height: 25rem;
@@ -90,11 +90,16 @@
   grid-row: 4 / 5;
 
   width: 100%;
-  min-height: 140rem;
+  height: auto;
 
   display: flex;
   flex-direction: column;
+  flex-direction: column;
   justify-content: flex-start;
+
+  @media only screen and (max-width: $bp-small) {
+    margin: 5rem 0;
+  }
 
   &__adv {
     min-height: 80rem;
@@ -110,10 +115,97 @@
 
     @media only screen and (max-width: $bp-large) {
       padding: 5rem 10%;
+      height: 70rem;
     }
     @media only screen and (max-width: $bp-medium) {
       padding: 5rem 5%;
-      min-height: 100rem;
+      min-height: 80rem;
+    }
+    @media only screen and (max-width: $bp-small) {
+      min-height: 90rem;
     }
   }
+  &__box {
+    height: 60rem;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-large) {
+      height: 70rem;
+    }
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+    }
+
+    &__text {
+      height: 100%;
+      width: 40%;
+      padding: 2rem 5rem;
+
+      @media only screen and (max-width: $bp-large) {
+        padding: 1rem 2rem;
+      }
+
+      @media only screen and (max-width: $bp-medium) {
+        width: 55%;
+      }
+      @media only screen and (max-width: $bp-small) {
+        order: 2;
+        width: 100%;
+      }
+    }
+    &__picture {
+      height: 100%;
+      width: 60%;
+
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+
+      @media only screen and (max-width: $bp-small) {
+        order: 1;
+      }
+
+      &__img {
+        height: 50rem;
+        width: 50rem;
+        padding: 2rem;
+        background-color: white;
+        border-radius: 5px;
+        margin-top: -20rem;
+        z-index: 10;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        @media only screen and (max-width: $bp-medium) {
+          height: 35rem;
+          width: 35rem;
+        }
+
+        img {
+          height: 48rem;
+          width: auto;
+          border-radius: 5px;
+
+          @media only screen and (max-width: $bp-medium) {
+            height: 33rem;
+          }
+        }
+      }
+    }
+  }
+}
+.del {
+  grid-column: 1 / -1;
+  grid-row: 5 / 6;
+
+  width: 100%;
+  height: 50rem;
+
+  background-color: $color-tertiary;
 }
