--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -53,11 +53,11 @@
   align-items: center;
 
   @media only screen and (max-width: $bp-large) {
-    min-height: 50vh;
+    min-height: 60rem;
   }
 
   @media only screen and (max-width: $bp-medium) {
-    min-height: 35rem;
+    min-height: 50rem;
   }
   @media only screen and (max-width: $bp-small) {
     min-height: 45rem;
@@ -136,8 +136,14 @@
     @media only screen and (max-width: $bp-large) {
       height: 70rem;
     }
+    @media only screen and (max-width: $bp-medium) {
+      margin-top: -5rem;
+      height: 60rem;
+    }
     @media only screen and (max-width: $bp-small) {
       flex-direction: column;
+      margin-top: 0;
+      height: 70rem;
     }
 
     &__text {
@@ -165,6 +171,9 @@
       justify-content: center;
       align-items: flex-start;
 
+      @media only screen and (max-width: $bp-medium) {
+        width: 40%;
+      }
       @media only screen and (max-width: $bp-small) {
         order: 1;
       }
@@ -183,8 +192,14 @@
         align-items: center;
 
         @media only screen and (max-width: $bp-medium) {
+          height: 30rem;
+          width: 30rem;
+          margin-top: -10rem;
+        }
+        @media only screen and (max-width: $bp-small) {
           height: 35rem;
           width: 35rem;
+          margin-top: -20rem;
         }
 
         img {
@@ -193,6 +208,9 @@
           border-radius: 5px;
 
           @media only screen and (max-width: $bp-medium) {
+            height: 28rem;
+          }
+          @media only screen and (max-width: $bp-small) {
             height: 33rem;
           }
         }
