--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -92,10 +92,11 @@
 
   width: 100%;
   height: auto;
+  margin-bottom: 5rem;
 
   display: flex;
   flex-direction: column;
-  flex-direction: column;
+  align-items: center;
   justify-content: flex-start;
 
   @media only screen and (max-width: $bp-small) {
@@ -139,7 +140,7 @@
     }
     @media only screen and (max-width: $bp-medium) {
       margin-top: -5rem;
-      height: 60rem;
+      height: 55rem;
     }
     @media only screen and (max-width: $bp-small) {
       flex-direction: column;
