--- a/src/style/_text.scss
+++ b/src/style/_text.scss
@@ -18,6 +18,9 @@
     font-family: $text-hand;
     font-size: 4rem;
 
+    @media only screen and (max-width: $bp-medium) {
+      font-size: 3.3rem;
+    }
     @media only screen and (max-width: $bp-small) {
       font-size: 3rem;
     }
