--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -179,53 +179,81 @@
       @media only screen and (max-width: $bp-small) {
         order: 1;
       }
-
-      &__img {
-        height: 50rem;
-        width: 50rem;
-        padding: 2rem;
-        background-color: white;
-        border-radius: 5px;
-        margin-top: -20rem;
-        z-index: 10;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        @media only screen and (max-width: $bp-medium) {
-          height: 30rem;
-          width: 30rem;
-          margin-top: -10rem;
-        }
-        @media only screen and (max-width: $bp-small) {
-          height: 35rem;
-          width: 35rem;
-          margin-top: -20rem;
-        }
-
-        img {
-          height: 48rem;
-          width: auto;
-          border-radius: 5px;
-
-          @media only screen and (max-width: $bp-medium) {
-            height: 28rem;
-          }
-          @media only screen and (max-width: $bp-small) {
-            height: 33rem;
-          }
-        }
-      }
     }
   }
 }
-.del {
+.trip {
   grid-column: 1 / -1;
   grid-row: 5 / 6;
 
   width: 100%;
   height: 50rem;
 
-  background-color: $color-tertiary;
+  background-image: url(../../images/wallpaper--5.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.example {
+  grid-column: 1 / -1;
+  grid-row: 6 / 7;
+
+  width: 100%;
+  height: 50rem;
+
+  display: flex;
+
+  @media only screen and (max-width: $bp-small) {
+    flex-direction: column;
+    height: 65rem;
+  }
+
+  &__picture {
+    width: 50%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 100%;
+      height: 25rem;
+    }
+  }
+  &__text {
+    width: 50%;
+    height: 100%;
+    padding: 0 2rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 100%;
+      height: 35rem;
+      padding: 0 2rem;
+    }
+  }
+}
+.reviews {
+  grid-column: 1 / -1;
+  grid-row: 7 / 8;
+
+  width: 100%;
+  min-height: 40rem;
+  padding: 0 20%;
+  // background-color: $color-secondary;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  @media only screen and (max-width: $bp-small) {
+    min-height: 35rem;
+    padding: 0 10%;
+  }
 }
