--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -44,9 +44,6 @@
   min-height: 70vh;
 
   background-image: url(../../images/wallpaper--3.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 
   display: flex;
   justify-content: center;
@@ -63,27 +60,6 @@
     min-height: 45rem;
     align-items: flex-end;
     background-position: top;
-  }
-
-  &__box {
-    width: 50rem;
-    height: 30rem;
-    border-radius: 3px;
-    padding: 2rem;
-    background-color: $color-primary;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-
-    @media only screen and (max-width: $bp-large) {
-      width: 50rem;
-    }
-    @media only screen and (max-width: $bp-medium) {
-      height: 25rem;
-      width: 40rem;
-    }
   }
 }
 .about {
@@ -187,12 +163,19 @@
   grid-row: 5 / 6;
 
   width: 100%;
-  height: 50rem;
+  height: 70rem;
+  padding: 0 20%;
 
   background-image: url(../../images/wallpaper--5.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 0 5%;
+  }
 }
 .example {
   grid-column: 1 / -1;
@@ -245,7 +228,6 @@
   width: 100%;
   min-height: 40rem;
   padding: 0 20%;
-  // background-color: $color-secondary;
 
   display: flex;
   flex-direction: column;
@@ -255,5 +237,28 @@
   @media only screen and (max-width: $bp-small) {
     min-height: 35rem;
     padding: 0 10%;
+  }
+}
+.discover {
+  grid-column: 1 / -1;
+  grid-row: 8 / 9;
+
+  width: 100%;
+  min-height: 70rem;
+
+  background-image: url(../../images/wallpaper--7.jpg);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @media only screen and (max-width: $bp-large) {
+    min-height: 60rem;
+  }
+  @media only screen and (max-width: $bp-medium) {
+    min-height: 50rem;
+  }
+  @media only screen and (max-width: $bp-small) {
+    align-items: flex-end;
   }
 }
