--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -262,3 +262,68 @@
     align-items: flex-end;
   }
 }
+
+.footer {
+  grid-column: 1 / -1;
+  grid-row: 9 / 10;
+
+  width: 100%;
+  min-height: 25rem;
+  background-color: $color-secondary;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+  @media only screen and (max-width: $bp-small) {
+    flex-direction: column;
+    height: 60rem;
+    justify-content: flex-start;
+    padding-top: 5rem;
+  }
+
+  &__box {
+    height: 20rem;
+    width: 25%;
+    padding: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 100%;
+      align-items: center;
+    }
+
+    &-1 {
+      img {
+        height: 10rem;
+        width: auto;
+      }
+    }
+  }
+}
+
+.legal {
+  grid-column: 1 / -1;
+  grid-row: 10 / 11;
+
+  width: 100%;
+  min-height: 5rem;
+  padding: 0 2rem;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @media only screen and (max-width: $bp-small) {
+    flex-direction: column;
+    padding: 2rem;
+  }
+
+  h4 {
+    text-transform: none;
+  }
+}
