--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -223,7 +223,6 @@
 
   width: 100%;
   min-height: 40rem;
-  padding: 0 20%;
 
   display: flex;
   flex-direction: column;
@@ -232,7 +231,28 @@
 
   @media only screen and (max-width: $bp-small) {
     min-height: 35rem;
-    padding: 0 10%;
+  }
+
+  &__container {
+    height: 30rem;
+    width: 80%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 100%;
+    }
+  }
+  &__box {
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 .discover {
