--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -40,7 +40,7 @@
   grid-column: 1 / -1;
   grid-row: 3 / 4;
 
-  width: 100vw;
+  width: 100%;
   min-height: 70vh;
 
   background-image: url(../../images/wallpaper--3.jpg);
@@ -222,19 +222,15 @@
   grid-row: 7 / 8;
 
   width: 100%;
-  min-height: 40rem;
+  min-height: 35rem;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  @media only screen and (max-width: $bp-small) {
-    min-height: 35rem;
-  }
-
   &__container {
-    height: 30rem;
+    height: 20rem;
     width: 80%;
 
     display: flex;
@@ -243,6 +239,7 @@
 
     @media only screen and (max-width: $bp-small) {
       width: 100%;
+      height: 25rem;
     }
   }
   &__box {
@@ -293,7 +290,7 @@
 
   @media only screen and (max-width: $bp-small) {
     flex-direction: column;
-    height: 60rem;
+    height: 50rem;
     justify-content: flex-start;
     padding-top: 5rem;
   }
