--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -282,7 +282,7 @@
 
   width: 100%;
   min-height: 25rem;
-  background-color: $color-secondary;
+  background-color: $color-tertiary;
 
   display: flex;
   justify-content: space-evenly;
@@ -326,6 +326,7 @@
   width: 100%;
   min-height: 5rem;
   padding: 0 2rem;
+  background-color: $color-tertiary;
 
   display: flex;
   justify-content: space-between;
