--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -20,6 +20,7 @@ body {
   line-height: 1.45;
   font-size: 2.1rem;
   background-color: $color-primary;
+  position: relative;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
