--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -8,7 +8,7 @@
   z-index: 2;
   background-color: $color-primary;
 
-  &__about {
+  &__container {
     height: 100%;
     width: 100%;
     position: relative;
@@ -17,50 +17,49 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+  }
+  &__navigation {
+    height: 4rem;
+    width: 100%;
+    padding: 0 3%;
+    background-color: white;
+    position: fixed;
+    box-shadow: 0 5px 10px rgba($color: #000000, $alpha: 0.4);
 
-    &__nav {
-      height: 4rem;
-      width: 100%;
-      padding: 0 3%;
-      background-color: white;
-      position: fixed;
-      box-shadow: 0 5px 10px rgba($color: #000000, $alpha: 0.4);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  &__box {
+    height: 100%;
+    width: 100%;
+    padding: 6rem 15%;
+    overflow-y: scroll;
 
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 5rem 5%;
     }
-    &__container {
-      height: 100%;
-      width: 100%;
-      padding: 6rem 15%;
-      overflow-y: scroll;
 
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
+    img {
+      height: 50rem;
+      width: auto;
+      outline: 1rem solid white;
+      border-radius: 5px;
+      margin: 2rem 0;
 
       @media only screen and (max-width: $bp-small) {
-        padding: 5rem 5%;
+        height: auto;
+        width: 100%;
       }
-
-      img {
-        height: 50rem;
-        width: auto;
-        outline: 1rem solid white;
-        border-radius: 5px;
-        margin: 2rem 0;
-
-        @media only screen and (max-width: $bp-small) {
-          height: auto;
-          width: 100%;
-        }
-      }
-      p {
-        @media only screen and (max-width: $bp-small) {
-          margin-bottom: 0;
-        }
+    }
+    p {
+      @media only screen and (max-width: $bp-small) {
+        margin-bottom: 0;
       }
     }
   }
