--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -44,6 +44,7 @@
   padding: 1rem 2rem;
   border-radius: 3px;
   background-color: white;
+  color: $color-text-dark;
 
   @media only screen and (max-width: $bp-small) {
     font-size: 1.3rem;
