--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -37,13 +37,13 @@
 
 .button-menu {
   background-color: $color-primary;
-  text-transform: uppercase;
   font-size: 1.6rem;
+  letter-spacing: 1.5px;
   border: none;
   cursor: pointer;
   padding: 1rem 2rem;
   border-radius: 3px;
-  background-color: white;
+  background-color: transparent;
   color: $color-text-dark;
 
   @media only screen and (max-width: $bp-small) {
