--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -30,7 +30,8 @@
   width: 100%;
   min-height: 5rem;
 
-  background-color: $color-primary;
+  // background-color: $color-primary;
+  background-color: $color-secondary;
 
   display: flex;
   justify-content: center;
