--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -4,7 +4,7 @@
 
   width: 100%;
   min-height: 15rem;
-  background-color: $color-secondary;
+  background-color: $color-primary;
 
   display: flex;
   justify-content: center;
@@ -29,9 +29,7 @@
 
   width: 100%;
   min-height: 5rem;
-
-  // background-color: $color-primary;
-  background-color: $color-secondary;
+  background-color: $color-primary;
 
   display: flex;
   justify-content: center;
