--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -84,6 +84,7 @@
     width: 60rem;
     background-color: white;
     border-radius: 5px;
+    overflow-y: auto;
 
     display: flex;
     flex-direction: column;
@@ -99,13 +100,52 @@
     }
   }
   &__navigation {
-    height: 5rem;
+    height: 7rem;
     width: 100%;
-    padding: 0 2%;
+    padding: 2%;
 
     display: flex;
     justify-content: flex-end;
     align-items: center;
+  }
+  &__buttons {
+    height: 7rem;
+    width: 100%;
+    padding: 0 2%;
+    margin-top: 4rem;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  &__login {
+    height: 33rem;
+    width: 100%;
+    padding: 3rem 10%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    form {
+      height: 100%;
+      width: 100%;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    input {
+      height: 5rem;
+      width: 100%;
+      margin-bottom: 3rem;
+      padding: 0 2rem;
+      border: none;
+      border-bottom: 1px solid $color-text-dark;
+    }
   }
 }
 
