--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -80,7 +80,7 @@
   align-items: center;
 
   &__container {
-    height: 50rem;
+    height: auto;
     width: 60rem;
     background-color: white;
     border-radius: 5px;
@@ -95,7 +95,7 @@
       height: 35rem;
     }
     @media only screen and (max-width: $bp-small) {
-      height: 55rem;
+      // height: 55rem;
       border-radius: 0;
     }
   }
