--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -96,6 +96,7 @@
     }
     @media only screen and (max-width: $bp-small) {
       border-radius: 0;
+      height: 55rem;
     }
   }
   &__navigation {
