--- a/src/style/_text.scss
+++ b/src/style/_text.scss
@@ -35,6 +35,10 @@
   letter-spacing: 1.2px;
   padding: 1rem 2rem;
 
+  @media only screen and (max-width: $bp-small) {
+    font-size: 2rem;
+  }
+
   &--success {
     color: $color-tertiary;
   }
