--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -120,6 +120,10 @@
 .button-active {
   color: $color-tertiary;
   font-size: 3rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 2.5rem;
+  }
 }
 
 .button-connect {
