--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -98,6 +98,10 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      height: 5rem;
+    }
   }
   &__buttons {
     height: 7rem;
@@ -108,6 +112,13 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      margin-top: 0;
+    }
+    @media only screen and (max-width: $bp-small) {
+      margin-top: 3rem;
+    }
   }
   &__login {
     height: 33rem;
@@ -118,9 +129,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    @media only screen and (max-width: $bp-medium) {
+      height: 30rem;
+    }
     @media only screen and (max-width: $bp-small) {
       padding: 3rem 15%;
+      height: 25rem;
     }
 
     form {
