--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -148,12 +148,15 @@
     }
 
     input {
-      height: 5rem;
+      height: 3rem;
       width: 100%;
       margin-bottom: 3rem;
       padding: 0 2rem;
       border: none;
       border-bottom: 1px solid $color-text-dark;
+      @media only screen and (max-width: $bp-small) {
+        margin-bottom: 1rem;
+      }
     }
     &__message {
       height: 33rem;
