--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -41,7 +41,7 @@
 // NAVIGATION BUTTON
 .button-menu {
   background-color: $color-primary;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   letter-spacing: 1.5px;
   border: none;
   cursor: pointer;
@@ -49,11 +49,15 @@
   border-radius: 3px;
   background-color: transparent;
   color: $color-text-dark;
+  transition: all 0.2s ease-in;
 
   @media only screen and (max-width: $bp-small) {
     font-size: 1.3rem;
     padding: 0.5rem 1rem;
   }
+}
+.button-menu:hover {
+  color: rgba($color-text-dark, 0.5);
 }
 .button-menu:focus {
   outline: 0;
