--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -30,10 +30,15 @@
   width: 100%;
   min-height: 5rem;
   background-color: $color-primary;
+  padding-right: 5%;
 
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+
+  @media only screen and (max-width: $bp-small) {
+    padding-right: 3%;
+  }
 }
 .welcome {
   grid-column: 1 / -1;
