--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -31,6 +31,7 @@
   min-height: 5rem;
   background-color: $color-primary;
   padding-right: 5%;
+  position: relative;
 
   display: flex;
   justify-content: flex-end;
@@ -38,6 +39,105 @@
 
   @media only screen and (max-width: $bp-small) {
     padding-right: 3%;
+  }
+
+  &__dropdown {
+    position: absolute;
+    height: 55rem;
+    width: 50rem;
+    right: 5rem;
+    bottom: -55rem;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: $color-secondary;
+    z-index: 10;
+    padding: 1rem;
+    box-shadow: 2px 2px 10px rgba(black, 0.2);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      height: 50rem;
+      width: 50rem;
+      bottom: -50rem;
+      right: 0;
+    }
+    @media only screen and (max-width: $bp-small) {
+      width: 100%;
+      height: 70rem;
+      bottom: -70rem;
+      padding: 0;
+    }
+  }
+  &__header {
+    height: 5rem;
+    width: 100%;
+    text-align: center;
+  }
+  &__container {
+    height: 40rem;
+    width: 100%;
+    overflow: scroll;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      height: 45rem;
+    }
+  }
+  &__box {
+    height: 10rem;
+    width: 80%;
+    margin: 0.5rem 0;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px rgba(black, 0.2);
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 90%;
+    }
+
+    &__img {
+      height: 100%;
+      width: 10rem;
+      border-radius: 3px;
+      box-shadow: $button-shadow;
+    }
+    &__info {
+      height: 100%;
+      width: 15rem;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    &__price {
+      height: 100%;
+      width: 10rem;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  &__checkout {
+    height: 10rem;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 .welcome {
@@ -346,4 +446,8 @@
     text-decoration: none;
     color: $color-text-dark;
   }
+}
+
+.hide-dropdown {
+  display: none;
 }
