--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -72,10 +72,22 @@
       padding: 0;
     }
   }
+  &__x {
+    height: 5rem;
+    width: 100%;
+    padding: 0 3%;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
   &__header {
     height: 5rem;
     width: 100%;
-    text-align: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   &__container {
     height: 40rem;
@@ -97,6 +109,7 @@
     margin: 0.5rem 0;
     border-radius: 5px;
     box-shadow: 2px 2px 10px rgba(black, 0.2);
+    cursor: pointer;
 
     display: flex;
     justify-content: space-between;
@@ -124,11 +137,27 @@
     &__price {
       height: 100%;
       width: 10rem;
+      transition: all 0.3s ease-in;
 
       display: flex;
       justify-content: center;
       align-items: center;
     }
+    &__close {
+      height: 100%;
+      width: 10rem;
+      transition: all 10.3s ease-in;
+      background-color: $color-tertiary;
+      color: white;
+      overflow: hidden;
+
+      display: none;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  &__box:hover {
+    box-shadow: 2px 2px 10px rgba(black, 0.5);
   }
 
   &__checkout {
