--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -89,6 +89,15 @@
     justify-content: center;
     align-items: center;
   }
+  &__message {
+    height: 40rem;
+    width: 100%;
+    padding: 0 5%;
+
+    display: none;
+    justify-content: center;
+    align-items: center;
+  }
   &__container {
     height: 40rem;
     width: 100%;
