--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -24,3 +24,5 @@ $color-text-light: #dee2e6;
 // Shadows
 $button-shadow: 5px 10px 15px rgba(black, 0.3);
 $button-shadow-hover: 5px 15px 20px rgba(black, 0.6);
+
+$box-shandow: 2px 2px 10px rgb(0 0 0 / 20%);
