trip booking page v6

--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -34,7 +34,7 @@
   transform: translateY(3px);
   box-shadow: $button-shadow;
 }
-.button-cta:focus {
+.button-cta:focus-visible {
   outline: 0;
 }
 
