--- a/src/style/_booking.scss
+++ b/src/style/_booking.scss
@@ -24,8 +24,9 @@
   grid-column: 1 / -1;
   grid-row: 4 / 5;
 
-  height: auto;
+  height: 100rem;
   padding: 5rem 10%;
+  overflow: hidden;
 
   display: flex;
   flex-wrap: wrap;
@@ -101,4 +102,123 @@
       padding: 0;
     }
   }
+}
+
+.booking-see-more {
+  grid-column: 1 / -1;
+  grid-row: 5 / 6;
+
+  width: 100%;
+  height: 10rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#button-see-less {
+  display: none;
+}
+
+.booking-whyUs {
+  grid-column: 1 / -1;
+  grid-row: 6 / 7;
+
+  width: 100%;
+  height: 30rem;
+  padding: 0 5%;
+  background-color: $color-tertiary;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  @media only screen and (max-width: $bp-small) {
+    height: 20rem;
+    padding: 0 10%;
+  }
+
+  h1 {
+    width: 40%;
+    color: white;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 100%;
+    }
+  }
+}
+
+.booking-motivations {
+  grid-column: 1 / -1;
+  grid-row: 7 / 8;
+
+  width: 100%;
+  height: auto;
+  background-color: $color-tertiary;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  &__box {
+    height: 40rem;
+    width: 100%;
+    background-color: $color-secondary;
+    margin-bottom: 5rem;
+
+    display: flex;
+
+    @media only screen and (max-width: $bp-small) {
+      height: 20rem;
+      margin-bottom: 1.5rem;
+      box-shadow: $box-shandow;
+    }
+  }
+  &__picture {
+    height: 100%;
+    width: 65%;
+    clip-path: polygon(0 0, 100% 0, 83% 100%, 0% 100%);
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 55%;
+    }
+
+    &--1 {
+      background-image: url(../../images/whyus--1.jpg);
+    }
+    &--2 {
+      background-image: url(../../images/whyus--2.jpg);
+    }
+    &--3 {
+      background-image: url(../../images/whyus--3.jpg);
+    }
+    &--4 {
+      background-image: url(../../images/whyus--4.jpg);
+    }
+  }
+  &__text {
+    height: 100%;
+    width: 35%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 40%;
+    }
+  }
+}
+
+.booking-reviews {
+  grid-column: 1 / -1;
+  grid-row: 8 / 9;
+
+  width: 100%;
+  height: 50rem;
+  padding: 5rem 0;
 }
