--- a/src/style/_booking.scss
+++ b/src/style/_booking.scss
@@ -165,7 +165,7 @@
     width: 90%;
     background-color: $color-secondary;
     margin-bottom: 5rem;
-    border-radius: 3px;
+    border-radius: 5px;
     overflow: hidden;
     box-shadow: $box-shandow;
 
@@ -222,6 +222,40 @@
   grid-row: 8 / 9;
 
   width: 100%;
-  height: 50rem;
+  height: auto;
   padding: 5rem 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  &__container {
+    width: 100%;
+    height: 30rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__text {
+    height: 100%;
+    width: 60%;
+    margin: 0 2rem;
+    padding: 2rem 5%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 85%;
+      margin: 0;
+    }
+
+    h1 {
+      align-self: flex-end;
+    }
+  }
 }
