--- a/src/style/_booking.scss
+++ b/src/style/_booking.scss
@@ -238,7 +238,7 @@
     justify-content: center;
     align-items: center;
   }
-  &__text {
+  &__box {
     height: 100%;
     width: 60%;
     margin: 0 2rem;
