trip booking page v14

--- a/src/style/_booking.scss
+++ b/src/style/_booking.scss
@@ -189,7 +189,7 @@
     top: 0;
     left: 0;
     width: 25rem;
-    -webkit-backface-visibility: hidden; //for safari
+    // -webkit-backface-visibility: hidden; //for safari
     backface-visibility: hidden;
     border-radius: 3px;
     overflow: hidden;
