--- a/src/style/_booking.scss
+++ b/src/style/_booking.scss
@@ -147,10 +147,11 @@
   grid-row: 7 / 8;
 
   width: 100%;
-  height: 50rem;
+  height: auto;
   background-color: $color-tertiary;
 
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 
@@ -159,9 +160,104 @@
   }
 
   @media only screen and (max-width: $bp-medium) {
-    flex-direction: column;
     height: auto;
     padding-bottom: 5rem;
+  }
+
+  &__container {
+    width: 80%;
+    height: 40rem;
+    margin-bottom: 5rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      height: 40rem;
+      width: 90%;
+    }
+  }
+  &__picture {
+    height: 100%;
+    width: 40rem;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      width: 60rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      height: 30rem;
+      width: 100%;
+      order: 1;
+    }
+
+    &--1 {
+      background-image: url(../../images/whyus--1.jpg);
+    }
+    &--2 {
+      background-image: url(../../images/whyus--2.jpg);
+    }
+    &--3 {
+      background-image: url(../../images/whyus--3.jpg);
+    }
+    &--4 {
+      background-image: url(../../images/whyus--4.jpg);
+    }
+  }
+  &__text {
+    height: 80%;
+    width: 40rem;
+    z-index: 2;
+    padding: 3rem;
+    box-shadow: $box-shandow;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h3 {
+      margin-bottom: 2rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      height: 30rem;
+      width: 90%;
+      order: 2;
+
+      h3 {
+        font-size: 1.7rem;
+      }
+    }
+
+    &--left {
+      margin-right: -5rem;
+      background-color: $color-primary;
+
+      @media only screen and (max-width: $bp-medium) {
+        margin-right: -10rem;
+      }
+      @media only screen and (max-width: $bp-small) {
+        margin: -5rem 0 0 0;
+      }
+    }
+    &--right {
+      margin-left: -5rem;
+      background-color: $color-secondary;
+
+      @media only screen and (max-width: $bp-medium) {
+        margin-left: -10rem;
+      }
+      @media only screen and (max-width: $bp-small) {
+        margin: -5rem 0 0 0;
+      }
+    }
   }
 }
 
@@ -170,12 +266,12 @@
   grid-row: 8 / 9;
 
   width: 100%;
-  height: auto;
+  height: 60rem;
   padding: 5rem 0;
 
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 
   &__container {
