--- a/src/style/_booking.scss
+++ b/src/style/_booking.scss
@@ -182,6 +182,8 @@
   &__picture {
     height: 100%;
     width: 40rem;
+    border-radius: 5px;
+    border: 10px solid white;
 
     background-size: cover;
     background-repeat: no-repeat;
@@ -273,6 +275,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  @media only screen and (max-width: $bp-small) {
+    height: 50rem;
+  }
 
   &__container {
     width: 100%;
