--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,5 +10,6 @@
 @import 'modal';
 
 // Pages
-@import 'index';
-@import 'booking';
+@import 'index-page';
+@import 'booking-page';
+@import 'about-page';
