--- a/src/style/_booking-page.scss
+++ b/src/style/_booking-page.scss
@@ -126,6 +126,7 @@
   width: 100%;
   height: 20rem;
   padding: 0 5%;
+  margin-top: 5rem;
   background-color: $color-tertiary;
 
   display: flex;
