--- a/src/style/_about-page.scss
+++ b/src/style/_about-page.scss
@@ -176,7 +176,7 @@
   width: 100%;
   height: auto;
   margin-top: 5%;
-  padding: 2rem;
+  padding: 10rem 2rem;
   background-color: rgba($color-text-dark, 0.8);
 
   display: flex;
@@ -199,7 +199,7 @@
     border-radius: 3px;
     box-shadow: $box-shandow;
     cursor: pointer;
-    margin: 5% 0;
+    margin: 3% 0;
 
     background-position: center;
     background-size: cover;
